# trellis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-migrate  Dockerfile-server  Dockerfile-web  Makefile  Makefile.toml  README.md  about.hbs  about.toml  deny.toml  diesel.toml  docker-compose.yml  index.js  package-lock.json  package.json  service_worker.js  styles.css  tailwind.config.js  webpack.common.js  webpack.config.js  webpack.dev.js
.do/: Dockerfile  app.template.yaml  app.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2021-07-24-200340_create_settings/: up.sql
src/: app.rs  lib.rs
src/app/: weather.rs
stytch/: Cargo.toml  build.rs
stytch/src/: client.rs  endpoint.rs  env.rs  lib.rs  magic_links.rs  sessions.rs  status_code.rs  tests.rs  users.rs
stytch/src/magic_links/: email.rs  mod.rs
stytch/stytch_macro/: Cargo.toml
stytch/stytch_macro/src/: lib.rs
stytch/stytch_macro/tests/fail/: post_extra_args.rs  post_extra_args.stderr  post_no_args.rs  post_no_args.stderr  post_wrong_type.rs  post_wrong_type.stderr
stytch/stytch_macro/tests/pass/: post.rs
stytch/tests/: sandbox_test.rs
trellis-server/: Cargo.toml
trellis-server/src/: main.rs  models.rs
trellis-web/: Cargo.toml
trellis-web/src/: app.rs
trellis_core/: Cargo.toml
trellis_core/src/: config.rs  lib.rs  tests.rs
trellis_server/: Cargo.toml  Rocket.toml
trellis_server/src/: auth.rs  csrf.rs  main.rs  schema.rs
trellis_server/src/auth/: mod.rs
trellis_web/: Cargo.toml  build.rs
trellis_web/src/: app.rs  lib.rs
trellis_web/src/app/: about.rs  add_tile_form.rs  auth.rs  board.rs  clock.rs  config_form.rs  csrf.rs  footer.rs  grid.rs  login.rs  login_confirmation.rs  login_form.rs  logout_form.rs  note.rs  secrets_form.rs  settings.rs  settings_page.rs  weather.rs
