[package]
name = "stytch"
version = "0.1.0"
edition = "2018"

[dependencies]
http = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
