[package]
name = "trellis-server"
version = "0.1.0"
authors = ["Jeremy Kaplan <jdkaplan@metagram.net>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4" }
diesel = { version = "1.4.4", features = ["chrono", "postgres", "serde_json", "uuidv07"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }
