[package]
name = "trellis_server"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4" }
diesel = { version = "1.4.4", features = ["chrono", "postgres", "serde_json", "uuidv07"] }
log = "0.4"
rand = "0.8.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
stytch = { version = "0.1", path = "../stytch" }
thiserror = "1.0"
trellis_core = { version = "0.1", path = "../trellis_core" }
uuid = { version = "0.8", features = ["serde"] }
url = "2"
