[package]
name = "trellis_web"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["wasmbind"] }
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
trellis_core = { path = "../trellis_core" }
url = "2.2"
uuid = { version = "0.8", features = ["serde"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
yew = "0.18"
yewtil = "0.4"
