[package]
name = "stytch_macro"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["extra-traits", "full", "printing"]}
quote = "1.0"

[dev-dependencies]
http = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
stytch = { path = ".." }
trybuild = "1.0"
